--- a/1_Psen2S4Ter/R/kmer.qmd
+++ b/1_Psen2S4Ter/R/kmer.qmd
@@ -76,8 +76,9 @@ k5counts <- lapply(k5files, function(x){
     read_delim(x, col_names = c("mer", basename(x)), delim = " ") %>%
         set_colnames(str_remove_all(colnames(.), "_6month_.+_F3|[0-9]*_Ps2Ex3M1_|\\.dumps"))
 }) %>%
-    purrr::reduce(full_join) %>%
-    dplyr::select(mer, contains(c("WT", "Heter")))
+    purrr::reduce(full_join)
+# %>%
+    # dplyr::select(mer, contains(c("WT", "Heter")))
 ```
 
 ```{r k5dge}
@@ -92,8 +93,8 @@ k5dge$samples %<>%
     left_join(addInfo) %>%
     column_to_rownames("rowname")
 k5dge$samples$group <- colnames(k5dge) %>%
-    str_extract("(WT|Heter)") %>%
-    factor(levels = c("WT", "Heter"))
+    str_extract("(WT|Heter|Hom)") %>%
+    factor(levels = c("WT", "Heter", "Hom"))
 ```
 
 ### Properties
@@ -155,7 +156,7 @@ k5pcaPlot <- k5pca$x %>%
         colour = "Genotype",
         title = "k = 5"
     ) +
-    scale_colour_discrete(labels = c("Wildtype", "Mutant"))
+    scale_colour_discrete(labels = c("Wildtype", "Heterozygous", "Homozygous"))
 ```
 
 ```{r k5pcaRrna, fig.align = "center"}
@@ -176,7 +177,7 @@ k5pcaRrna <- k5pca$x %>%
         title = "k = 5"
     ) +
     scale_y_continuous(labels = percent) +
-    scale_colour_discrete(labels = c("Wildtype", "Mutant"))
+    scale_colour_discrete(labels = c("Wildtype", "Heterozygous", "Homozygous"))
 ```
 
 ### Differential expression
@@ -217,8 +218,9 @@ k6counts <- lapply(k6files, function(x){
     read_delim(x, col_names = c("mer", basename(x)), delim = " ") %>%
         set_colnames(str_remove_all(colnames(.), "_6month_.+_F3|[0-9]*_Ps2Ex3M1_|\\.dumps"))
 }) %>%
-    purrr::reduce(full_join) %>%
-    dplyr::select(mer, contains(c("WT", "Heter")))
+    purrr::reduce(full_join)
+# %>%
+    # dplyr::select(mer, contains(c("WT", "Heter")))
 ```
 
 ```{r k6dge}
@@ -233,8 +235,8 @@ k6dge$samples %<>%
     left_join(addInfo) %>%
     column_to_rownames("rowname")
 k6dge$samples$group <- colnames(k6dge) %>%
-    str_extract("(WT|Heter)") %>%
-    factor(levels = c("WT", "Heter"))
+    str_extract("(WT|Heter|Hom)") %>%
+    factor(levels = c("WT", "Heter", "Hom"))
 ```
 
 ### Properties
@@ -281,7 +283,6 @@ summary(k6pca)$importance %>% pander(split.tables = Inf)
 ```
 
 ```{r k6pcaPlot, fig.align = "center"}
-# Plot PCA
 k6pcaPlot <- k6pca$x %>%
     as.data.frame() %>%
     rownames_to_column("sample") %>%
@@ -297,7 +298,7 @@ k6pcaPlot <- k6pca$x %>%
         colour = "Genotype",
         title = "k = 6"
     ) +
-    scale_colour_discrete(labels = c("Wildtype", "Mutant"))
+    scale_colour_discrete(labels = c("Wildtype", "Heterozygous", "Homozygous"))
 ```
 
 ```{r k6pcaRrna, fig.align = "center"}
@@ -318,39 +319,10 @@ k6pcaRrna <- k6pca$x %>%
         title = "k = 6"
     ) +
     scale_y_continuous(labels = percent) +
-    scale_colour_discrete(labels = c("Wildtype", "Mutant"))
+    scale_colour_discrete(labels = c("Wildtype", "Heterozygous", "Homozygous"))
 ```
 
 ### Differential expression
-
-<!-- ```{r k6DE} -->
-<!-- k6design <- model.matrix(~rRNA, data = k6dge$samples) -->
-<!-- k6voom <- voom(k6dge, design = k6design) -->
-<!-- k6fit <- lmFit(k6voom, design = k6design) -->
-<!-- k6eBayes <- eBayes(k6fit) -->
-<!-- ``` -->
-
-<!-- ```{r k6topTable} -->
-<!-- k6topTable <- k6eBayes %>% -->
-<!--     topTable(coef = colnames(k6design)[2], sort.by = "p", n = Inf) %>% -->
-<!--     set_colnames(str_remove(colnames(.), "ID\\.")) %>% -->
-<!--     rownames_to_column("mer") %>% -->
-<!--     mutate(BY = p.adjust(P.Value, "BY")) %>% -->
-<!--     mutate(DE = BY < 0.05) %>% -->
-<!--     dplyr::select( -->
-<!--         mer, -->
-<!--         AveExpr, -->
-<!--         logFC, -->
-<!--         P.Value, -->
-<!--         FDR = adj.P.Val, -->
-<!--         BY, -->
-<!--         t, -->
-<!--         DE, -->
-<!--         everything(), -->
-<!--         -B -->
-<!--     ) %>% -->
-<!--     as_tibble() -->
-<!-- ``` -->
 
 ```{r}
 k6design <- model.matrix(~rRNA, data = k6dge$samples)
@@ -388,8 +360,9 @@ k7counts <- lapply(k7files, function(x){
     read_delim(x, col_names = c("mer", basename(x)), delim = " ") %>%
         set_colnames(str_remove_all(colnames(.), "_6month_.+_F3|[0-9]*_Ps2Ex3M1_|\\.dumps"))
 }) %>%
-    purrr::reduce(full_join) %>%
-    dplyr::select(mer, contains(c("WT", "Heter")))
+    purrr::reduce(full_join)
+# %>%
+    # dplyr::select(mer, contains(c("WT", "Heter")))
 ```
 
 ```{r k7dge}
@@ -404,8 +377,8 @@ k7dge$samples %<>%
     left_join(addInfo) %>%
     column_to_rownames("rowname")
 k7dge$samples$group <- colnames(k7dge) %>%
-    str_extract("(WT|Heter)") %>%
-    factor(levels = c("WT", "Heter"))
+    str_extract("(WT|Heter|Hom)") %>%
+    factor(levels = c("WT", "Heter", "Hom"))
 ```
 
 ### Properties
@@ -452,7 +425,6 @@ summary(k7pca)$importance %>% pander(split.tables = Inf)
 ```
 
 ```{r k7pcaPlot, fig.align = "center"}
-# Plot PCA
 k7pcaPlot <- k7pca$x %>%
     as.data.frame() %>%
     rownames_to_column("sample") %>%
@@ -468,7 +440,7 @@ k7pcaPlot <- k7pca$x %>%
         colour = "Genotype",
         title = "k = 7"
     ) +
-    scale_colour_discrete(labels = c("Wildtype", "Mutant"))
+    scale_colour_discrete(labels = c("Wildtype", "Heterozygous", "Homozygous"))
 ```
 
 ```{r k7pcaRrna, fig.align = "center"}
@@ -489,39 +461,10 @@ k7pcaRrna <- k7pca$x %>%
         title = "k = 7"
     ) +
     scale_y_continuous(labels = percent) +
-    scale_colour_discrete(labels = c("Wildtype", "Mutant"))
+    scale_colour_discrete(labels = c("Wildtype", "Heterozygous", "Homozygous"))
 ```
 
 ### Differential expression
-
-<!-- ```{r k7DE} -->
-<!-- k7design <- model.matrix(~rRNA, data = k7dge$samples) -->
-<!-- k7voom <- voom(k7dge, design = k7design) -->
-<!-- k7fit <- lmFit(k7voom, design = k7design) -->
-<!-- k7eBayes <- eBayes(k7fit) -->
-<!-- ``` -->
-
-<!-- ```{r k7topTable} -->
-<!-- k7topTable <- k7eBayes %>% -->
-<!--     topTable(coef = colnames(k7design)[2], sort.by = "p", n = Inf) %>% -->
-<!--     set_colnames(str_remove(colnames(.), "ID\\.")) %>% -->
-<!--     rownames_to_column("mer") %>% -->
-<!--     mutate(BY = p.adjust(P.Value, "BY")) %>% -->
-<!--     mutate(DE = BY < 0.05) %>% -->
-<!--     dplyr::select( -->
-<!--         mer, -->
-<!--         AveExpr, -->
-<!--         logFC, -->
-<!--         P.Value, -->
-<!--         FDR = adj.P.Val, -->
-<!--         BY, -->
-<!--         t, -->
-<!--         DE, -->
-<!--         everything(), -->
-<!--         -B -->
-<!--     ) %>% -->
-<!--     as_tibble() -->
-<!-- ``` -->
 
 ```{r}
 k7design <- model.matrix(~rRNA, data = k7dge$samples)
@@ -559,8 +502,9 @@ k8counts <- lapply(k8files, function(x){
     read_delim(x, col_names = c("mer", basename(x)), delim = " ") %>%
         set_colnames(str_remove_all(colnames(.), "_6month_.+_F3|[0-9]*_Ps2Ex3M1_|\\.dumps"))
 }) %>%
-    purrr::reduce(full_join) %>%
-    dplyr::select(mer, contains(c("WT", "Heter")))
+    purrr::reduce(full_join)
+# %>%
+    # dplyr::select(mer, contains(c("WT", "Heter")))
 ```
 
 ```{r k8dge}
@@ -575,8 +519,8 @@ k8dge$samples %<>%
     left_join(addInfo) %>%
     column_to_rownames("rowname")
 k8dge$samples$group <- colnames(k8dge) %>%
-    str_extract("(WT|Heter)") %>%
-    factor(levels = c("WT", "Heter"))
+    str_extract("(WT|Heter|Hom)") %>%
+    factor(levels = c("WT", "Heter", "Hom"))
 ```
 
 ### Properties
@@ -623,7 +567,6 @@ summary(k8pca)$importance %>% pander(split.tables = Inf)
 ```
 
 ```{r k8pcaPlot, fig.align = "center"}
-# Plot PCA
 k8pcaPlot <- k8pca$x %>%
     as.data.frame() %>%
     rownames_to_column("sample") %>%
@@ -639,7 +582,7 @@ k8pcaPlot <- k8pca$x %>%
         colour = "Genotype",
         title = "k = 8"
     ) +
-    scale_colour_discrete(labels = c("Wildtype", "Mutant"))
+    scale_colour_discrete(labels = c("Wildtype", "Heterozygous", "Homozygous"))
 ```
 
 ```{r k8pcaRrna, fig.align = "center"}
@@ -660,38 +603,10 @@ k8pcaRrna <- k8pca$x %>%
         title = "k = 8"
     ) +
     scale_y_continuous(labels = percent) +
-    scale_colour_discrete(labels = c("Wildtype", "Mutant"))
+    scale_colour_discrete(labels = c("Wildtype", "Heterozygous", "Homozygous"))
 ```
+
 ### Differential expression
-
-<!-- ```{r k8DE} -->
-<!-- k8design <- model.matrix(~rRNA, data = k8dge$samples) -->
-<!-- k8voom <- voom(k8dge, design = k8design) -->
-<!-- k8fit <- lmFit(k8voom, design = k8design) -->
-<!-- k8eBayes <- eBayes(k8fit) -->
-<!-- ``` -->
-
-<!-- ```{r k8topTable} -->
-<!-- k8topTable <- k8eBayes %>% -->
-<!--     topTable(coef = colnames(k8design)[2], sort.by = "p", n = Inf) %>% -->
-<!--     set_colnames(str_remove(colnames(.), "ID\\.")) %>% -->
-<!--     rownames_to_column("mer") %>% -->
-<!--     mutate(BY = p.adjust(P.Value, "BY")) %>% -->
-<!--     mutate(DE = BY < 0.05) %>% -->
-<!--     dplyr::select( -->
-<!--         mer, -->
-<!--         AveExpr, -->
-<!--         logFC, -->
-<!--         P.Value, -->
-<!--         FDR = adj.P.Val, -->
-<!--         BY, -->
-<!--         t, -->
-<!--         DE, -->
-<!--         everything(), -->
-<!--         -B -->
-<!--     ) %>% -->
-<!--     as_tibble() -->
-<!-- ``` -->
 
 ```{r}
 k8design <- model.matrix(~rRNA, data = k8dge$samples)
@@ -729,8 +644,9 @@ k9counts <- lapply(k9files, function(x){
     read_delim(x, col_names = c("mer", basename(x)), delim = " ") %>%
         set_colnames(str_remove_all(colnames(.), "_6month_.+_F3|[0-9]*_Ps2Ex3M1_|\\.dumps"))
 }) %>%
-    purrr::reduce(full_join) %>%
-    dplyr::select(mer, contains(c("WT", "Heter")))
+    purrr::reduce(full_join)
+# %>%
+    # dplyr::select(mer, contains(c("WT", "Heter")))
 ```
 
 ```{r k9dge}
@@ -745,8 +661,8 @@ k9dge$samples %<>%
     left_join(addInfo) %>%
     column_to_rownames("rowname")
 k9dge$samples$group <- colnames(k9dge) %>%
-    str_extract("(WT|Heter)") %>%
-    factor(levels = c("WT", "Heter"))
+    str_extract("(WT|Heter|Hom)") %>%
+    factor(levels = c("WT", "Heter", "Hom"))
 ```
 
 ### Properties
@@ -793,7 +709,6 @@ summary(k9pca)$importance %>% pander(split.tables = Inf)
 ```
 
 ```{r k9pcaPlot, fig.align = "center"}
-# Plot PCA
 k9pcaPlot <- k9pca$x %>%
     as.data.frame() %>%
     rownames_to_column("sample") %>%
@@ -809,7 +724,7 @@ k9pcaPlot <- k9pca$x %>%
         colour = "Genotype",
         title = "k = 9"
     ) +
-    scale_colour_discrete(labels = c("Wildtype", "Mutant"))
+    scale_colour_discrete(labels = c("Wildtype", "Heterozygous", "Homozygous"))
 ```
 
 ```{r k9pcaRrna, fig.align = "center"}
@@ -830,7 +745,7 @@ k9pcaRrna <- k9pca$x %>%
         title = "k = 9"
     ) +
     scale_y_continuous(labels = percent) +
-    scale_colour_discrete(labels = c("Wildtype", "Mutant"))
+    scale_colour_discrete(labels = c("Wildtype", "Heterozygous", "Homozygous"))
 ```
 
 ### Differential expression
@@ -871,8 +786,9 @@ k10counts <- lapply(k10files, function(x){
     read_delim(x, col_names = c("mer", basename(x)), delim = " ") %>%
         set_colnames(str_remove_all(colnames(.), "_6month_.+_F3|[0-9]*_Ps2Ex3M1_|\\.dumps"))
 }) %>%
-    purrr::reduce(full_join) %>%
-    dplyr::select(mer, contains(c("WT", "Heter")))
+    purrr::reduce(full_join)
+# %>%
+    # dplyr::select(mer, contains(c("WT", "Heter")))
 ```
 
 ```{r k10dge}
@@ -887,38 +803,38 @@ k10dge$samples %<>%
     left_join(addInfo) %>%
     column_to_rownames("rowname")
 k10dge$samples$group <- colnames(k10dge) %>%
-    str_extract("(WT|Heter)") %>%
-    factor(levels = c("WT", "Heter"))
+    str_extract("(WT|Heter|Hom)") %>%
+    factor(levels = c("WT", "Heter", "Hom"))
 ```
 
 ### Properties
 
 ```{r k10dist}
-k10dist <- k10dge %>%
-    cpm(log = TRUE) %>%
-    as.data.frame() %>%
-    pivot_longer(everything(), names_to = "sample", values_to = "count") %>%
-    ggplot(aes(x=count, colour = sample)) +
-    geom_density() +
-    labs(x = "intensity", title = "Distribution of 10-mers")
+# k10dist <- k10dge %>%
+#     cpm(log = TRUE) %>%
+#     as.data.frame() %>%
+#     pivot_longer(everything(), names_to = "sample", values_to = "count") %>%
+#     ggplot(aes(x=count, colour = sample)) +
+#     geom_density() +
+#     labs(x = "intensity", title = "Distribution of 10-mers")
 ```
 
 ```{r k10den, results="hide"}
-k10labels <- k10dge$samples %>% 
-    mutate(label = paste0(sample, "\n", percent(rRNA, accuracy = 0.01), " rRNA")) %>% 
-    .$label
-k10heat <- k10dge %>% 
-    cpm(log = TRUE) %>%
-    as.data.frame() %>%
-    t() %>%
-    pheatmap(silent = TRUE, cluster_cols = FALSE,
-             show_colnames = FALSE, fontsize = 9,
-             fontsize_row = 10, border_color = NA,
-             main = "10-mer counts heatmap", labels_row = k10labels)
-k10heat$tree_row$labels <- k10labels
-k10den <- ggdendrogram(k10heat$tree_row, rotate = TRUE) +
-    labs(title = "Hierarchical clustering of 10-mer counts") +
-    theme(plot.title = element_text(size = 12))
+# k10labels <- k10dge$samples %>% 
+#     mutate(label = paste0(sample, "\n", percent(rRNA, accuracy = 0.01), " rRNA")) %>% 
+#     .$label
+# k10heat <- k10dge %>% 
+#     cpm(log = TRUE) %>%
+#     as.data.frame() %>%
+#     t() %>%
+#     pheatmap(silent = TRUE, cluster_cols = FALSE,
+#              show_colnames = FALSE, fontsize = 9,
+#              fontsize_row = 10, border_color = NA,
+#              main = "10-mer counts heatmap", labels_row = k10labels)
+# k10heat$tree_row$labels <- k10labels
+# k10den <- ggdendrogram(k10heat$tree_row, rotate = TRUE) +
+#     labs(title = "Hierarchical clustering of 10-mer counts") +
+#     theme(plot.title = element_text(size = 12))
 ```
 
 ```{r k10pca}
@@ -935,7 +851,6 @@ summary(k10pca)$importance %>% pander(split.tables = Inf)
 ```
 
 ```{r k10pcaPlot, fig.align = "center"}
-# Plot PCA
 k10pcaPlot <- k10pca$x %>%
     as.data.frame() %>%
     rownames_to_column("sample") %>%
@@ -951,60 +866,31 @@ k10pcaPlot <- k10pca$x %>%
         colour = "Genotype",
         title = "k = 10"
     ) +
-    scale_colour_discrete(labels = c("Wildtype", "Mutant"))
+    scale_colour_discrete(labels = c("Wildtype", "Heterozygous", "Homozygous"))
 ```
 
 ```{r k10pcaRrna, fig.align = "center"}
-k10pcaRrna <- k10pca$x %>%
-    as.data.frame() %>%
-    rownames_to_column("sample") %>%
-    as_tibble() %>%
-    dplyr::select(sample, PC1, PC2) %>%
-    left_join(k10dge$samples) %>%
-    ggplot(aes(PC1, rRNA, label = rRNA)) +
-    geom_point(aes(colour = group), alpha = 0.8, size = 3) +
-    geom_text_repel(show.legend = FALSE) +
-    geom_smooth(method = "lm") +
-    labs(
-        x = paste0("PC1 (", percent(summary(k10pca)$importance[2, "PC1"]), ")"),
-        y = "rRNA proportion",
-        colour = "Genotype",
-        title = "k = 10"
-    ) +
-    scale_y_continuous(labels = percent) +
-    scale_colour_discrete(labels = c("Wildtype", "Mutant"))
+# k10pcaRrna <- k10pca$x %>%
+#     as.data.frame() %>%
+#     rownames_to_column("sample") %>%
+#     as_tibble() %>%
+#     dplyr::select(sample, PC1, PC2) %>%
+#     left_join(k10dge$samples) %>%
+#     ggplot(aes(PC1, rRNA, label = rRNA)) +
+#     geom_point(aes(colour = group), alpha = 0.8, size = 3) +
+#     geom_text_repel(show.legend = FALSE) +
+#     geom_smooth(method = "lm") +
+#     labs(
+#         x = paste0("PC1 (", percent(summary(k10pca)$importance[2, "PC1"]), ")"),
+#         y = "rRNA proportion",
+#         colour = "Genotype",
+#         title = "k = 10"
+#     ) +
+#     scale_y_continuous(labels = percent) +
+#     scale_colour_discrete(labels = c("Wildtype", "Heterozygous", "Homozygous"))
 ```
 
 ### Differential expression
-
-<!-- ```{r k10DE} -->
-<!-- k10design <- model.matrix(~rRNA, data = k10dge$samples) -->
-<!-- k10voom <- voom(k10dge, design = k10design) -->
-<!-- k10fit <- lmFit(k10voom, design = k10design) -->
-<!-- k10eBayes <- eBayes(k10fit) -->
-<!-- ``` -->
-
-<!-- ```{r k10topTable} -->
-<!-- k10topTable <- k10eBayes %>% -->
-<!--     topTable(coef = colnames(k10design)[2], sort.by = "p", n = Inf) %>% -->
-<!--     set_colnames(str_remove(colnames(.), "ID\\.")) %>% -->
-<!--     rownames_to_column("mer") %>% -->
-<!--     mutate(BY = p.adjust(P.Value, "BY")) %>% -->
-<!--     mutate(DE = BY < 0.05) %>% -->
-<!--     dplyr::select( -->
-<!--         mer, -->
-<!--         AveExpr, -->
-<!--         logFC, -->
-<!--         P.Value, -->
-<!--         FDR = adj.P.Val, -->
-<!--         BY, -->
-<!--         t, -->
-<!--         DE, -->
-<!--         everything(), -->
-<!--         -B -->
-<!--     ) %>% -->
-<!--     as_tibble() -->
-<!-- ``` -->
 
 ```{r}
 k10design <- model.matrix(~rRNA, data = k10dge$samples)
@@ -1042,8 +928,9 @@ k11counts <- lapply(k11files, function(x){
     read_delim(x, col_names = c("mer", basename(x)), delim = " ") %>%
         set_colnames(str_remove_all(colnames(.), "_6month_.+_F3|[0-9]*_Ps2Ex3M1_|\\.dumps"))
 }) %>%
-    purrr::reduce(full_join) %>%
-    dplyr::select(mer, contains(c("WT", "Heter")))
+    purrr::reduce(full_join)
+# %>%
+    # dplyr::select(mer, contains(c("WT", "Heter")))
 ```
 
 ```{r k11dge}
@@ -1059,38 +946,38 @@ k11dge$samples %<>%
     left_join(addInfo) %>%
     column_to_rownames("rowname")
 k11dge$samples$group <- colnames(k11dge) %>%
-    str_extract("(WT|Heter)") %>%
-    factor(levels = c("WT", "Heter"))
+    str_extract("(WT|Heter|Hom)") %>%
+    factor(levels = c("WT", "Heter", "Hom"))
 ```
 
 ### Properties
 
 ```{r k11dist}
-k11dist <- k11dge %>%
-    cpm(log = TRUE) %>%
-    as.data.frame() %>%
-    pivot_longer(everything(), names_to = "sample", values_to = "count") %>%
-    ggplot(aes(x=count, colour = sample)) +
-    geom_density() +
-    labs(x = "intensity", title = "Distribution of 11-mers")
+# k11dist <- k11dge %>%
+#     cpm(log = TRUE) %>%
+#     as.data.frame() %>%
+#     pivot_longer(everything(), names_to = "sample", values_to = "count") %>%
+#     ggplot(aes(x=count, colour = sample)) +
+#     geom_density() +
+#     labs(x = "intensity", title = "Distribution of 11-mers")
 ```
 
 ```{r k11den, results="hide"}
-k11labels <- k11dge$samples %>% 
-    mutate(label = paste0(sample, "\n", percent(rRNA, accuracy = 0.01), " rRNA")) %>% 
-    .$label
-k11heat <- k11dge %>% 
-    cpm(log = TRUE) %>%
-    as.data.frame() %>%
-    t() %>%
-    pheatmap(silent = TRUE, cluster_cols = FALSE,
-             show_colnames = FALSE, fontsize = 9,
-             fontsize_row = 10, border_color = NA,
-             main = "11-mer counts heatmap", labels_row = k11labels)
-k11heat$tree_row$labels <- k11labels
-k11den <- ggdendrogram(k11heat$tree_row, rotate = TRUE) +
-    labs(title = "Hierarchical clustering of 11-mer counts") +
-    theme(plot.title = element_text(size = 12))
+# k11labels <- k11dge$samples %>% 
+#     mutate(label = paste0(sample, "\n", percent(rRNA, accuracy = 0.01), " rRNA")) %>% 
+#     .$label
+# k11heat <- k11dge %>% 
+#     cpm(log = TRUE) %>%
+#     as.data.frame() %>%
+#     t() %>%
+#     pheatmap(silent = TRUE, cluster_cols = FALSE,
+#              show_colnames = FALSE, fontsize = 9,
+#              fontsize_row = 10, border_color = NA,
+#              main = "11-mer counts heatmap", labels_row = k11labels)
+# k11heat$tree_row$labels <- k11labels
+# k11den <- ggdendrogram(k11heat$tree_row, rotate = TRUE) +
+#     labs(title = "Hierarchical clustering of 11-mer counts") +
+#     theme(plot.title = element_text(size = 12))
 ```
 
 ```{r k11pca}
@@ -1107,7 +994,6 @@ summary(k11pca)$importance %>% pander(split.tables = Inf)
 ```
 
 ```{r k11pcaPlot, fig.align = "center"}
-# Plot PCA
 k11pcaPlot <- k11pca$x %>%
     as.data.frame() %>%
     rownames_to_column("sample") %>%
@@ -1123,28 +1009,28 @@ k11pcaPlot <- k11pca$x %>%
         colour = "Genotype",
         title = "k = 11"
     ) +
-    scale_colour_discrete(labels = c("Wildtype", "Mutant"))
+    scale_colour_discrete(labels = c("Wildtype", "Heterozygous", "Homozygous"))
 ```
 
 ```{r k11pcaRrna, fig.align = "center"}
-k11pcaRrna <- k11pca$x %>%
-    as.data.frame() %>%
-    rownames_to_column("sample") %>%
-    as_tibble() %>%
-    dplyr::select(sample, PC1, PC2) %>%
-    left_join(k11dge$samples) %>%
-    ggplot(aes(PC1, rRNA, label = rRNA)) +
-    geom_point(aes(colour = group), alpha = 0.8, size = 3) +
-    geom_text_repel(show.legend = FALSE) +
-    geom_smooth(method = "lm") +
-    labs(
-        x = paste0("PC1 (", percent(summary(k11pca)$importance[2, "PC1"]), ")"),
-        y = "rRNA proportion",
-        colour = "Genotype",
-        title = "k = 11"
-    ) +
-    scale_y_continuous(labels = percent) +
-    scale_colour_discrete(labels = c("Wildtype", "Mutant"))
+# k11pcaRrna <- k11pca$x %>%
+#     as.data.frame() %>%
+#     rownames_to_column("sample") %>%
+#     as_tibble() %>%
+#     dplyr::select(sample, PC1, PC2) %>%
+#     left_join(k11dge$samples) %>%
+#     ggplot(aes(PC1, rRNA, label = rRNA)) +
+#     geom_point(aes(colour = group), alpha = 0.8, size = 3) +
+#     geom_text_repel(show.legend = FALSE) +
+#     geom_smooth(method = "lm") +
+#     labs(
+#         x = paste0("PC1 (", percent(summary(k11pca)$importance[2, "PC1"]), ")"),
+#         y = "rRNA proportion",
+#         colour = "Genotype",
+#         title = "k = 11"
+#     ) +
+#     scale_y_continuous(labels = percent) +
+#     scale_colour_discrete(labels = c("Wildtype", "Heterozygous", "Homozygous"))
 ```
 
 ### Differential expression
@@ -1185,8 +1071,9 @@ k12counts <- lapply(k12files, function(x){
     read_delim(x, col_names = c("mer", basename(x)), delim = " ") %>%
         set_colnames(str_remove_all(colnames(.), "_6month_.+_F3|[0-9]*_Ps2Ex3M1_|\\.dumps"))
 }) %>%
-    purrr::reduce(full_join) %>%
-    dplyr::select(mer, contains(c("WT", "Heter")))
+    purrr::reduce(full_join)
+# %>%
+    # dplyr::select(mer, contains(c("WT", "Heter")))
 ```
 
 ```{r k12dge}
@@ -1202,38 +1089,38 @@ k12dge$samples %<>%
     left_join(addInfo) %>%
     column_to_rownames("rowname")
 k12dge$samples$group <- colnames(k12dge) %>%
-    str_extract("(WT|Heter)") %>%
-    factor(levels = c("WT", "Heter"))
+    str_extract("(WT|Heter|Hom)") %>%
+    factor(levels = c("WT", "Heter", "Hom"))
 ```
 
 ### Properties
 
 ```{r k12dist}
-k12dist <- k12dge %>%
-    cpm(log = TRUE) %>%
-    as.data.frame() %>%
-    pivot_longer(everything(), names_to = "sample", values_to = "count") %>%
-    ggplot(aes(x=count, colour = sample)) +
-    geom_density() +
-    labs(x = "intensity", title = "Distribution of 12-mers")
+# k12dist <- k12dge %>%
+#     cpm(log = TRUE) %>%
+#     as.data.frame() %>%
+#     pivot_longer(everything(), names_to = "sample", values_to = "count") %>%
+#     ggplot(aes(x=count, colour = sample)) +
+#     geom_density() +
+#     labs(x = "intensity", title = "Distribution of 12-mers")
 ```
 
 ```{r k12den, results="hide"}
-k12labels <- k12dge$samples %>% 
-    mutate(label = paste0(sample, "\n", percent(rRNA, accuracy = 0.01), " rRNA")) %>% 
-    .$label
-k12heat <- k12dge %>% 
-    cpm(log = TRUE) %>%
-    as.data.frame() %>%
-    t() %>%
-    pheatmap(silent = TRUE, cluster_cols = FALSE,
-             show_colnames = FALSE, fontsize = 9,
-             fontsize_row = 10, border_color = NA,
-             main = "12-mer counts heatmap", labels_row = k12labels)
-k12heat$tree_row$labels <- k12labels
-k12den <- ggdendrogram(k12heat$tree_row, rotate = TRUE) +
-    labs(title = "Hierarchical clustering of 12-mer counts") +
-    theme(plot.title = element_text(size = 12))
+# k12labels <- k12dge$samples %>% 
+#     mutate(label = paste0(sample, "\n", percent(rRNA, accuracy = 0.01), " rRNA")) %>% 
+#     .$label
+# k12heat <- k12dge %>% 
+#     cpm(log = TRUE) %>%
+#     as.data.frame() %>%
+#     t() %>%
+#     pheatmap(silent = TRUE, cluster_cols = FALSE,
+#              show_colnames = FALSE, fontsize = 9,
+#              fontsize_row = 10, border_color = NA,
+#              main = "12-mer counts heatmap", labels_row = k12labels)
+# k12heat$tree_row$labels <- k12labels
+# k12den <- ggdendrogram(k12heat$tree_row, rotate = TRUE) +
+#     labs(title = "Hierarchical clustering of 12-mer counts") +
+#     theme(plot.title = element_text(size = 12))
 ```
 
 ```{r k12pca}
@@ -1250,7 +1137,6 @@ summary(k12pca)$importance %>% pander(split.tables = Inf)
 ```
 
 ```{r k12pcaPlot, fig.align = "center"}
-# Plot PCA
 k12pcaPlot <- k12pca$x %>%
     as.data.frame() %>%
     rownames_to_column("sample") %>%
@@ -1266,28 +1152,28 @@ k12pcaPlot <- k12pca$x %>%
         colour = "Genotype",
         title = "k = 12"
     ) +
-    scale_colour_discrete(labels = c("Wildtype", "Mutant"))
+    scale_colour_discrete(labels = c("Wildtype", "Heterozygous", "Homozygous"))
 ```
 
 ```{r k12pcaRrna, fig.align = "center"}
-k12pcaRrna <- k12pca$x %>%
-    as.data.frame() %>%
-    rownames_to_column("sample") %>%
-    as_tibble() %>%
-    dplyr::select(sample, PC1, PC2) %>%
-    left_join(k12dge$samples) %>%
-    ggplot(aes(PC1, rRNA, label = rRNA)) +
-    geom_point(aes(colour = group), alpha = 0.8, size = 3) +
-    geom_text_repel(show.legend = FALSE) +
-    geom_smooth(method = "lm") +
-    labs(
-        x = paste0("PC1 (", percent(summary(k12pca)$importance[2, "PC1"]), ")"),
-        y = "rRNA proportion",
-        colour = "Genotype",
-        title = "k = 12"
-    ) +
-    scale_y_continuous(labels = percent) +
-    scale_colour_discrete(labels = c("Wildtype", "Mutant"))
+# k12pcaRrna <- k12pca$x %>%
+#     as.data.frame() %>%
+#     rownames_to_column("sample") %>%
+#     as_tibble() %>%
+#     dplyr::select(sample, PC1, PC2) %>%
+#     left_join(k12dge$samples) %>%
+#     ggplot(aes(PC1, rRNA, label = rRNA)) +
+#     geom_point(aes(colour = group), alpha = 0.8, size = 3) +
+#     geom_text_repel(show.legend = FALSE) +
+#     geom_smooth(method = "lm") +
+#     labs(
+#         x = paste0("PC1 (", percent(summary(k12pca)$importance[2, "PC1"]), ")"),
+#         y = "rRNA proportion",
+#         colour = "Genotype",
+#         title = "k = 12"
+#     ) +
+#     scale_y_continuous(labels = percent) +
+#     scale_colour_discrete(labels = c("Wildtype", "Heterozygous", "Homozygous"))
 ```
 
 ### Differential expression
@@ -1318,10 +1204,10 @@ k12topTable <- glmQLFTest(k12fit) %>%
 # Distributions
 
 ```{r allDists, fig.height=12, fig.cap="*Distributions of kmer counts for each value of $k$*"}
-ggarrange(
-    k5dist, k6dist, k7dist, k8dist, k9dist, k10dist, k11dist, k12dist,
-    ncol = 2, nrow = 4, common.legend = TRUE, legend = "bottom" 
-)
+# ggarrange(
+#     k5dist, k6dist, k7dist, k8dist, k9dist, k10dist, k11dist, k12dist,
+#     ncol = 2, nrow = 4, common.legend = TRUE, legend = "bottom" 
+# )
 ```
 
 # PCA
@@ -1334,19 +1220,19 @@ ggarrange(
 ```
 
 ```{r allPcaRrnas, fig.height=12, fig.cap="*Principal component analysis for all values of $k$. As $k$ increases, WT and mutant groups start to separate.*"}
-ggarrange(
-    k5pcaRrna, k6pcaRrna, k7pcaRrna, k8pcaRrna, k9pcaRrna, k10pcaRrna, k11pcaRrna, k12pcaRrna,
-    ncol = 2, nrow = 4, common.legend = TRUE, legend = "bottom"
-)
+# ggarrange(
+#     k5pcaRrna, k6pcaRrna, k7pcaRrna, k8pcaRrna, k9pcaRrna, k10pcaRrna, k11pcaRrna, k12pcaRrna,
+#     ncol = 2, nrow = 4, common.legend = TRUE, legend = "bottom"
+# )
 ```
 
 # Clustering
 
 ```{r allDens, fig.height=12, fig.cap="*Hierarchical clustering of samples based on kmer counts. As $k$ increases, WT and mutant groups start to cluster.*"}
-ggarrange(
-    k5den, k6den, k7den, k8den, k9den, k10den, k11den, k12den,
-    ncol = 2, nrow = 4, common.legend = TRUE, legend = "bottom"
-)
+# ggarrange(
+#     k5den, k6den, k7den, k8den, k9den, k10den, k11den, k12den,
+#     ncol = 2, nrow = 4, common.legend = TRUE, legend = "bottom"
+# )
 ```
 
 # Differential expression
@@ -1697,6 +1583,18 @@ k12topTable %>%
     labs(x = "logFC", y = expression(paste(-log[10], "(p)")), title = "k = 11") +
     theme_bw() +
     theme(legend.position = "none")
+```
+
+# k-mer GC
+
+```{r}
+mutate(
+    k11topTable,
+    gc = str_count(mer, "G|C") / str_length(mer),
+    direction = ifelse(sign(logFC) == -1, "Down", "Up")
+    ) %>%
+    ggplot(aes(gc, group = direction, colour = direction)) +
+    stat_ecdf()
 ```
 
 # Data export
